# facedetect

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
data/: lena.I420
include/: cascade.h  facedetect.h
script/: xml2header.cmake
src/: CMakeLists.txt  facedetect.cpp
test/: CMakeLists.txt  detect.cpp  test.cpp
